--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ TRANSPORT_PROVIDER=TCP
 TRANSPORT_HOST=127.0.0.1
 TRANSPORT_PORT=8000
 
+HTTP_PORT=3002
+ROOT_PATH=/home/ihor/Documents/nest-datum-lib/files/storage
+
 MYSQL_MASTER_HOST=127.0.0.1
 MYSQL_MASTER_PORT=3306
 MYSQL_MASTER_USER=datatype_master
