--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ SERVICE_LOGS=logs
 SERVICE_SSO=sso
 SERVICE_HTTP=http
 SERVICE_DATA_TYPE=data-type
+SERVICE_REGISTRY=registry
+SERVICE_FILES=files
+SERVICE_MAIL=mail
+SERVICE_FORMS=forms
+SERVICE_CV=cv
+SERVICE_LENSA=lensa
 
 SQL_HOST=127.0.0.1
 SQL_PORT=3306
