--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,7 @@ SQL_PORT=3306
 SQL_USER=dev_data_type1
 SQL_USER_PASSWORD=dev_data_type1
 SQL_DATABASE=dev_data_type1
+IS_SQL_SYNC=true
 
 REDIS_TRANSPORT_HOST=127.0.0.1
 REDIS_TRANSPORT_PORT=6379
